Tweak wallpapers list slightly (Disabled blur to fix flickering)

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --accent-color: ;
   --primary-color: ;
   --secondary-color: ;
-
+  --dark-text-color: #333333;
 }
 
 * {
@@ -126,7 +126,7 @@ input[type="checkbox"] {
   text-align: center;
   border-radius: 0 2.5em 2.5em 0;
   cursor: pointer;
-  color: #333333;
+  color: var(--dark-text-color);
   font-size: clamp(1em, 1em, 2em);
 }
 
@@ -230,6 +230,7 @@ input[type="checkbox"] {
   padding-block: 0.8em;
   padding-inline: 1em;
   cursor: pointer;
+  color: var(--dark-text-color);
 }
 
 .thumb-group:hover {
@@ -260,9 +261,9 @@ input[type="checkbox"] {
   border-radius: 0 0 0.75em 0.75em;
   border: 0 solid antiquewhite;
   border-top: none;
-  width: 6.85em;
+  width: 6.89em;
   padding-top: 0.3em;
-  margin-top: 3.1em;
+  margin-top: 3.15em;
   margin-left: 0.05em;
   padding-left: 0.75em;
   padding-right: 0.25em;
@@ -272,9 +273,10 @@ input[type="checkbox"] {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  backdrop-filter: blur(1em);
-  -webkit-backdrop-filter: blur(1em);
-  background-color: rgba(250, 235, 215, 0.25);
+  color: var(--dark-text-color);
+  /* backdrop-filter: blur(1em);
+  -webkit-backdrop-filter: blur(1em); */
+  background-color: rgba(250, 235, 215, 0.8);
   pointer-events: none;
 }
 
